Create Service, repository, document and mapper for Device
